# Ghost-Block-FPGA-Simulator

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md
.config/: config.toml
crates/simulator-core/: Cargo.toml
crates/simulator-core/src/: cell.rs  lib.rs  macros.rs
src/: action.rs  app.rs  components.rs  config.rs  main.rs  tui.rs
src/cli/: mod.rs
src/components/console/: mod.rs
src/fpga/: cell.rs  mod.rs
src/gui/: mod.rs
src/gui/fpga_viewer/: mod.rs
src/io/: mod.rs
src/simulator_core/: cell.rs  macros.rs  mod.rs
src/tui/: console.rs  mod.rs
src/ui/: mod.rs
src/ui/fpga_viewer/: mod.rs
src/ui/menu/: menu_bar.rs
