[package]
name = "GB-FPGA-Simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard = { version = "1.1.3", features = ["alloc"] }
simulator-core = { version = "0.1.0", path = "crates/simulator-core" }
rfd = "0.15.4"
anyhow = "1.0.100"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
better-panic = "0.3.0"
